simple/test/features/errors/semantic/e1063_type_size_limit.spl
# E1063: Type Size Limit Exceeded

Feature: E1063 - Type Size Limit Exceeded
  As a Simple compiler
  I want to detect when type sizes exceed limits
  So that memory usage is controlled

  Background:
    Given I have the Simple compiler

  Scenario: Extremely large type
    When I compile:
      '''
      struct Large:
        field1: [i32; 1000000]
        field2: [i32; 1000000]
        field3: [i32; 1000000]
        # ... type too large
      '''
    Then I should see error E1063
    And the error message should be "type size limit exceeded"
    And the label should indicate "type too large"
    And the help should suggest "reduce type size or use indirection (Box, references)"

  Scenario: Valid type with indirection
    When I compile:
      '''
      struct Node:
        value: i32
        next: Box<Node>  # OK: uses indirection
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      struct Large:
        field: [i32; 10000000]
      '''
    Then I should see error E1063
    And the error message should contain "타입 크기 한도 초과"
